@@ -3,12 +3,13 @@ lib_LTLIBRARIES = libAtlasCodecs.la
 
 libAtlasCodecs_la_LDFLAGS = $(INTERFACE_VERSION)
 
-libAtlasCodecsincludedir = $(includedir)/Atlas/Codecs
-
 libAtlasCodecs_la_SOURCES = \
 	Utility.h \
+	Binary1.cpp Binary1.h \
 	Packed.cpp Packed.h \
 	XML.cpp XML.h \
 	Bach.cpp Bach.h
 
-libAtlasCodecsinclude_HEADERS = XML.h Packed.h Utility.h Bach.h
+libAtlasCodecsincludedir = $(includedir)/Atlas/Codecs
+
+libAtlasCodecsinclude_HEADERS = XML.h Binary1.h Packed.h Utility.h Bach.h
