@@ -3,10 +3,10 @@ lib_LTLIBRARIES = libAtlasFunky.la
 
 libAtlasFunky_la_LDFLAGS = $(INTERFACE_VERSION)
 
-libAtlasFunkyincludedir = $(includedir)/Atlas/Funky
-
 libAtlasFunky_la_SOURCES = \
         FEncoder.cpp
+
+libAtlasFunkyincludedir = $(includedir)/Atlas/Funky
 
 libAtlasFunkyinclude_HEADERS = \
         FEncoder.h
