@@ -3,10 +3,10 @@ lib_LTLIBRARIES = libAtlasMessage.la
 
 libAtlasMessage_la_LDFLAGS = $(INTERFACE_VERSION)
 
-libAtlasMessageincludedir = $(includedir)/Atlas/Message
-
 libAtlasMessage_la_SOURCES = \
 	Object.cpp MEncoder.cpp DecoderBase.cpp QueuedDecoder.cpp
+
+libAtlasMessageincludedir = $(includedir)/Atlas/Message
 
 libAtlasMessageinclude_HEADERS = \
 	Object.h Layer.h MEncoder.h DecoderBase.h QueuedDecoder.h
