@@ -1,7 +1,10 @@
+
 bin_PROGRAMS = atlas_convert
 
-INCLUDES = -I../
+INCLUDES = -I$(top_srcdir)/src
 
 atlas_convert_SOURCES = atlas_convert.cpp
 
-atlas_convert_LDFLAGS = -L../ -L../Codecs/ -L../Message/ -lAtlas -lAtlasCodecs -lAtlasMessage
+atlas_convert_LDFLAGS = \
+	-L$(top_builddir)/src -L$(top_builddir)/src/Codecs -L$(top_builddir)/src/Message \
+	-lAtlas -lAtlasCodecs -lAtlasMessage
