@@ -1,4 +1,6 @@
+
 bin_PROGRAMS = simple_server simple_client
 
 simple_server_SOURCES = simple_server.cpp DebugBridge.h
+
 simple_client_SOURCES = simple_client.cpp DebugBridge.h
